fixed hover on mobile?

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -48,7 +48,7 @@ body {
 	transition-duration:0.5s;
 }
 
-.desc:hover {
+.desc:hover  .desc:active{
 	opacity: 1;
 }
 
